log/build_2022-04-01_16-16-42/HLC/stderr.log
  File "/home/pham/PucksInDeep/install/HLC/lib/python3.8/site-packages/HLC/main.py", line 51
    msg.y = float(self.mallet_y)self.mallet_x-np.avg(self.goal_range)
                                ^
SyntaxError: invalid syntax

